--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,10 @@
   "name": "art-gallery",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "antd": "^3.22.0",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.11",
@@ -13,7 +15,9 @@
     "react-router": "^5.0.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "reactstrap": "^8.0.1",
+    "save": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
